# app/Http/Controllers/Controller.php
@@ -30,6 +30,26 @@ class Controller extends BaseController
      *      scheme="Bearer",
      *      bearerFormat="JWT",
      * )
+     *
+     * @OA\SecurityScheme(
+     *     type="apiKey",
+     *     name="api_key",
+     *     in="header",
+     *     securityScheme="api_key"
+     * )
+     *
+     * @OA\SecurityScheme(
+     *   type="oauth2",
+     *   securityScheme="petstore_auth",
+     *   @OA\Flow(
+     *      authorizationUrl="http://petstore.swagger.io/oauth/dialog",
+     *      flow="implicit",
+     *      scopes={
+     *         "read:pets": "read your pets",
+     *         "write:pets": "modify pets in your account"
+     *      }
+     *   )
+     * )
      */
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
 }
